@@ -1,5 +1,10 @@
 <h1>News</h1>
 
+<h2>Version 0.8.19</h2>
+<p> Xjadeo version 0.8.10 offers support for macOS BigSur and Apple M1 ARM.
+A new keyboard shorcut was added to offset the video in increments of &pm; 1 sec.
+</p>
+
 <h2>Version 0.8.9</h2>
 <p>Build system and binary dependency update only. xjadeo binaries now feature
 <a href="http://www.ffmpeg.org/">ffmpeg</a> v3.4.5 (latest v3 stable).
