@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
-.TH XJADEO "1" "December 2018" "xjadeo version 0.8.9" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.8.
+.TH XJADEO "1" "January 2021" "xjadeo version 0.8.10" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
@@ -303,11 +303,17 @@ Toggle seek\-bar (experimental)
 \&'\e'
 Reset timecode offset to zero
 .TP
-\&'+'
+\&'='
 Increase timecode offset by one frame
 .TP
 \&'\-'
 Decrease timecode offset by one frame
+.TP
+\&'+'
+Increase timecode offset by one second
+.TP
+\&'_'
+Decrease timecode offset by one second
 .TP
 \&'{'
 Decrement timecode offset by one minute
@@ -356,16 +362,16 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.9
+scm\-v0.8.10
 .IP
-compiled with: AVFORMAT=0x393865 AVCODEC=0x394065 AVUTIL:0x372265
+compiled with: AVFORMAT=0x3a1464 AVCODEC=0x3a2364 AVUTIL:0x381664
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
 .br
 MTC/MIDI:      [ jack\-midi alsa\-sequencer portmidi alsa\-raw ]
 .br
-Display(s):    [ openGL Xv X11/imlib2(RGBA32) ]
+Display(s):    [ openGL Xv SDL X11/imlib2(RGBA32) ]
 .SH COPYRIGHT
-Copyright \(co GPL 2006\-2015 Robin Gareus <robin@gareus.org>
+Copyright \(co GPL 2006\-2021 Robin Gareus <robin@gareus.org>
 .br
 Copyright \(co GPL 2006\-2011 Luis Garrido <luisgarrido@users.sourceforge.net>
 .br
