@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
-.TH XJREMOTE "1" "December 2018" "xjremote version 0.8.9" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.8.
+.TH XJREMOTE "1" "January 2021" "xjremote version 0.8.10" "User Commands"
 .SH NAME
 xjremote \- X Jack Video Monitor Remote Control
 .SH SYNOPSIS
@@ -54,12 +54,12 @@ Report bugs to Robin Gareus <robin@gareus.org>
 Website: <https://github.com/x42/xjadeo>
 .TP
 built from:
-scm\-v0.8.9
+scm\-v0.8.10
 .TP
 configuration:
 [ POSIX\-MQueue ]
 .SH COPYRIGHT
-Copyright \(co GPL 2006,2014 Robin Gareus <robin@gareus.org>
+Copyright \(co GPL 2006\-2021 Robin Gareus <robin@gareus.org>
 .br
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
